gcc/testsuite/gdc.test/runnable/link11127.d
// EXTRA_FILES: imports/link11127a.d
import imports.link11127a;

void main()
{
    cycle([1, 2]);
}
