gcc/testsuite/gdc.test/fail_compilation/fail5953a1.d
void main()
{
    auto a2 = [,];    // invalid, but compiles
}
